--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
       </nav>
 
-      <div class="container mt-5">
+      <div class="container-fluid mt-5">
         <div class="row" id="productContainer">
             
         </div>
