--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </form> -->
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Contacto</a>
+                <a href="#" class="btn btn-primary"><strong>Comprar</strong></a>
               </li>
             </ul>
           </div>
